# weston-cmake

./: .gitignore  CMakeLists.txt  README.md
cmake/: show_target_properties.cmake
package/: CMakeLists.txt
package/x11proto-bigreqs/: CMakeLists.txt
package/x11proto-composite/: CMakeLists.txt
package/x11proto-damage/: CMakeLists.txt
package/x11proto-dmx/: CMakeLists.txt
package/x11proto-dri2/: CMakeLists.txt
package/x11proto-dri3/: CMakeLists.txt
package/x11proto-fixes/: CMakeLists.txt
package/x11proto-fonts/: CMakeLists.txt
package/x11proto-gl/: CMakeLists.txt
package/x11proto-input/: CMakeLists.txt
package/x11proto-kb/: CMakeLists.txt
package/x11proto-present/: CMakeLists.txt
package/x11proto-randr/: CMakeLists.txt
package/x11proto-record/: CMakeLists.txt
package/x11proto-render/: CMakeLists.txt
package/x11proto-resource/: CMakeLists.txt
package/x11proto-scrnsaver/: CMakeLists.txt
package/x11proto-video/: CMakeLists.txt
package/x11proto-x/: CMakeLists.txt
package/x11proto-xcmisc/: CMakeLists.txt
package/x11proto-xext/: CMakeLists.txt
package/x11proto-xf86bigfont/: CMakeLists.txt
package/x11proto-xf86dga/: CMakeLists.txt
package/x11proto-xf86dri/: CMakeLists.txt
package/x11proto-xf86vidmode/: CMakeLists.txt
package/x11proto-xinerama/: CMakeLists.txt
package/zlib/: CMakeLists.txt
source/bigreqsproto-1.1.2/: .gitignore
source/compositeproto-0.4.2/: .gitignore
source/damageproto-1.2.1/: .gitignore
source/dmxproto-2.3.1/: .gitignore
source/dri2proto-2.8/: .gitignore
source/dri3proto-1.0/: .gitignore
source/fixesproto-5.0/: .gitignore
source/fontsproto-2.1.3/: .gitignore
source/glproto-1.4.17/: .gitignore
source/inputproto-2.3.2/: .gitignore
source/kbproto-1.0.7/: .gitignore
source/presentproto-1.1/: .gitignore
source/randrproto-1.5.0/: .gitignore
source/recordproto-1.14.2/: .gitignore
source/renderproto-0.11.1/: renderproto.pc
source/resourceproto-1.2.0/: resourceproto.pc
source/scrnsaverproto-1.2.2/: .gitignore
source/videoproto-2.3.3/: .gitignore
source/xcmiscproto-1.2.2/: .gitignore
source/xextproto-7.3.0/: .gitignore
source/xf86bigfontproto-1.2.0/: .gitignore
source/xf86dgaproto-2.1/: .gitignore
source/xf86driproto-2.1.1/: .gitignore
source/xf86vidmodeproto-2.3.1/: .gitignore
source/xineramaproto-1.2.1/: .gitignore
source/xproto-7.0.31/: .gitignore
source/zlib-1.2.11/: .gitignore
