add_subdirectory(x11proto-bigreqs)
add_subdirectory(x11proto-composite)
add_subdirectory(x11proto-damage)
add_subdirectory(x11proto-dmx)
add_subdirectory(x11proto-dri2)
add_subdirectory(x11proto-dri3)
add_subdirectory(x11proto-fixes)
add_subdirectory(x11proto-fonts)
add_subdirectory(x11proto-gl)
add_subdirectory(x11proto-input)
add_subdirectory(x11proto-kb)
add_subdirectory(x11proto-present)
add_subdirectory(x11proto-randr)
add_subdirectory(x11proto-record)
add_subdirectory(x11proto-render)
add_subdirectory(x11proto-resource)
add_subdirectory(x11proto-scrnsaver)
add_subdirectory(x11proto-video)
add_subdirectory(x11proto-x)
add_subdirectory(x11proto-xcmisc)
add_subdirectory(x11proto-xext)
add_subdirectory(x11proto-xf86bigfont)
add_subdirectory(x11proto-xf86dga)
add_subdirectory(x11proto-xf86dri)
add_subdirectory(x11proto-xf86vidmode)
add_subdirectory(x11proto-xinerama)
add_subdirectory(zlib)
